--- a/build.gradle
+++ b/build.gradle
@@ -2,19 +2,20 @@ buildscript {
   repositories {
     mavenCentral()
     jcenter()
+    google()
   }
 
   dependencies {
     classpath 'org.gradle.api.plugins:gradle-nexus-plugin:0.7'
-    classpath 'com.android.tools.build:gradle:1.3.1'
-    classpath 'org.aspectj:aspectjtools:1.8.6'
-    classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
+    classpath 'com.android.tools.build:gradle:3.5.3'
+    classpath 'org.aspectj:aspectjtools:1.9.5'
   }
 }
 
 allprojects {
   repositories {
     mavenCentral()
+    google()
   }
 
   group = GROUP
@@ -24,8 +25,8 @@ allprojects {
 }
 
 ext {
-  compileSdkVersion = 23
-  buildToolsVersion = '23.0.1'
+  compileSdkVersion = 29
+  buildToolsVersion = '29.0.2'
 }
 
 task cleanExample(type: Exec) {
