--- a/hugo-example/build.gradle
+++ b/hugo-example/build.gradle
@@ -1,41 +1,22 @@
-buildscript {
-  dependencies {
-    repositories {
-      mavenCentral()
-
-      // NOTE: This is only needed when developing the plugin!
-      mavenLocal()
-    }
-
-    classpath 'com.android.tools.build:gradle:1.3.1'
-    classpath 'com.jakewharton.hugo:hugo-plugin:1.2.2-SNAPSHOT'
-  }
-}
-
 apply plugin: 'com.android.application'
-apply plugin: 'hugo'
-
-dependencies {
-  repositories {
-    mavenCentral()
-
-    // NOTE: This is only needed when developing the plugin!
-    mavenLocal()
-  }
-}
+apply plugin: 'com.jakewharton.hugo'
 
 android {
-  compileSdkVersion 23
-  buildToolsVersion '23.0.1'
+
+  compileSdkVersion 29
+  buildToolsVersion '29.0.2'
+
+  defaultConfig {
+    minSdkVersion 22
+    targetSdkVersion 29
+    applicationId 'com.example.hugo.dev'
+    versionCode 1
+    versionName '1.0.0'
+  }
 
   compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_7
-    targetCompatibility JavaVersion.VERSION_1_7
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
   }
 
-  buildTypes {
-    dev {
-      applicationIdSuffix '.dev'
-    }
-  }
 }
