--- a/hugo-plugin/build.gradle
+++ b/hugo-plugin/build.gradle
@@ -6,11 +6,11 @@ targetCompatibility = JavaVersion.VERSION_1_8
 sourceCompatibility = JavaVersion.VERSION_1_8
 
 dependencies {
-  compile gradleApi()
-  compile localGroovy()
-  compile 'com.android.tools.build:gradle:3.5.3'
-  compile 'org.aspectj:aspectjtools:1.9.5'
-  compile 'org.aspectj:aspectjrt:1.9.5'
+  implementation gradleApi()
+  implementation localGroovy()
+  implementation 'com.android.tools.build:gradle:3.5.3'
+  implementation 'org.aspectj:aspectjtools:1.9.5'
+  implementation 'org.aspectj:aspectjrt:1.9.5'
 }
 
 modifyPom {
