--- a/hugo-runtime/build.gradle
+++ b/hugo-runtime/build.gradle
@@ -5,15 +5,22 @@ import org.aspectj.tools.ajc.Main
 apply plugin: 'com.android.library'
 
 dependencies {
-  compile 'org.aspectj:aspectjrt:1.9.5'
-  compile project(':hugo-annotations')
+  implementation 'org.aspectj:aspectjrt:1.9.5'
+  implementation project(':hugo-annotations')
 
-  testCompile 'junit:junit:4.12'
+  testImplementation 'junit:junit:4.13'
 }
 
 android {
   compileSdkVersion rootProject.ext.compileSdkVersion
   buildToolsVersion rootProject.ext.buildToolsVersion
+
+  defaultConfig {
+    minSdkVersion 22
+    targetSdkVersion 29
+    versionCode 2
+    versionName '1.2.2'
+  }
 
   compileOptions {
     sourceCompatibility JavaVersion.VERSION_1_8
